--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.7.6
 Babel==2.9.1
 blinker==1.4
-certifi==2021.10.8
+certifi==2023.7.22
 charset-normalizer==2.0.12
 click==8.0.4
 dnspython==2.2.0
@@ -9,7 +9,7 @@ dominate==2.6.0
 elastic-transport==8.1.0
 elasticsearch==8.1.0
 email-validator==1.1.3
-Flask==2.0.3
+flask==2.2.5
 Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
